# scheduler

./: README.md  pyproject.toml
events/events/: settings.py  urls.py
events/scheduler/: admin.py  models.py  tests.py  urls.py  views.py
events/scheduler/migrations/: 0001_initial.py
events/scheduler/static/scheduler/: main.css
events/scheduler/templates/scheduler/: day.html  user.html
