[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = "An event scheduler"
authors = ["Georgios Verigakis <verigak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
